--- a/examples/templates/kubevirt/cool.template.yaml
+++ b/examples/templates/kubevirt/cool.template.yaml
@@ -38,7 +38,7 @@ spec:
         fsGroup: 1000
       containers:
         - name: code-server
-          image: codercom/enterprise-base:ubuntu
+          image: ghcr.io/ii/emacs-coder:latest
           command: ${coder_command}
           securityContext:
             runAsUser: 1000
