--- a/examples/templates/kubevirt-talos/role+binding.yaml
+++ b/examples/templates/kubevirt-talos/role+binding.yaml
@@ -41,6 +41,13 @@ rules:
       - "patch"
       - "create"
       - "delete"
+  - apiGroups:
+      - ""
+    resources:
+      - secrets
+    verbs:
+      - get
+      - list
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
